Update payment, edit class-payos, checkout-payos.js

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
-    "name": "payment_vgtech/payment",
+    "name": "paymentvgtech/payment",
     "autoload": {
         "psr-4": {
-            "payment_vgtech\\": "src/"
+            "paymentvgtech\\": [
+                "src/",
+                "src/includes/"
+            ]
         }
     },
     "require": {}
